syntax = "proto3";

package commands;

option go_package = "github.com/shreybatra/crankdb/cql";

enum DataType {
    BOOL = 0;
    BYTES = 1;
    INT = 2;
    LONG = 3;
    FLOAT = 4;
    DOUBLE = 5;
    STRING = 6;
    JSON = 7;
}

message DataPacket {
    string key = 1;

    DataType dataType = 2;

    bool boolVal = 16;
    bytes bytesVal = 17;
    sint32 s32intVal = 18;
    sint64 s64intVal = 19;
    float floatVal = 20;
    double doubleVal = 21;
    string stringVal = 22;
    bytes jsonVal = 23;
}