syntax = "proto3";

package commands;

option go_package = "github.com/shreybatra/crankdb/cql";

message FindCommandRequest {
    bytes Query = 1;
}