syntax = "proto3";

package commands;

option go_package = "github.com/shreybatra/crankdb/cql";

message SetCommandResponse {
    bool success = 1;
}